Update pom file to add sun.java2d.cmm as an export